--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,21 @@ name: Deploy
 on:
   push:
     branches:
-      - main
+      - actions
 
 jobs:
-  build:
+  unit_testing:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 16
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16.x'
+      - run: npm install
+      - run: npm test
+  deploy:
+    needs: unit_testing
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
